--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ html, body {
     --background-color: light-dark(#faf9f6, #faf9f6);
     --darker-color: #3b3737;
     --text-color: #1b89aa;
+    --emphasis-color: #3d7489;
     --emphasis-text-color: #d5a10a;
     --button-section-color: #f1e8d0;
     --footer-color: rgb(205, 205, 205);
@@ -53,7 +54,7 @@ html, body {
 
 b {
     font-weight: var(--font-weight-bold);
-    color: var(--emphasis-text-color);
+    color: var(--emphasis-color);
 }
 
 ul {
