--- a/style.css
+++ b/style.css
@@ -336,12 +336,12 @@ header .navbar {
     margin: 16px 0 30px;
     text-align: center;
     font-size: var(--font-size-s);
-    line-height: 26px;
+    line-height: 8px;
 }
 
 .about-section .social-link-list {
-    margin-top: 25px;
-    padding: 6px 0 14px 0;
+    margin-top: 8px;
+    padding: 6px 0 0 0;
     display: flex;
     flex-direction: row;
     gap: 40px;
